--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,6 @@ eclipse.preferences.version=1
 encoding//WebRoot/css/login.css=UTF-8
 encoding//WebRoot/css/regist.css=UTF-8
 encoding//WebRoot/js/regist.js=UTF-8
-encoding//WebRoot/login.jsp=UTF-8
+encoding//WebRoot/jsp/login.jsp=UTF-8
 encoding/<project>=UTF-8
 encoding/danggui.sql=UTF-8
